# seotool-gui

./: .gitignore  .pre-commit-config.yaml  Makefile  gui.py  main.py  makefile  pyproject.toml  requirements.dev.in  requirements.dev.txt  requirements.in  requirements.txt  setup.cfg  setup.py
seogui/: gui.py
src/: main.py
ui/: __init__.py  mainWindow.py
ui-src/: mainWindow.ui
